:hammer: Adding README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "imake"
 version = "0.1.0a2"
 description = ""
 authors = ["William C. Canin <william.costa.canin@gmail.com>"]
-readme = "README.rst"
+readme = "README.md"
 license = "MIT"
 keywords=["snakypy", "makefile", "make", "imake"]
 homepage = "https://github.com/snakypy/imake"
