--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "imake"
-version = "0.1.1"
-description = ""
+version = "0.1.2"
+description = "iMake is a command line tool to simplify commands in Python projects, discarding the usability of a Makefile file."
 authors = ["William C. Canin <william.costa.canin@gmail.com>"]
 readme = "README.md"
 license = "MIT"
@@ -29,7 +29,7 @@ imake = "snakypy.imake:run"
 [tool.poetry.dependencies]
 python = "^3.9"
 tomlkit = "^0.7.2"
-snakypy-helpers = "^0.1.4"
+snakypy-helpers = ">=0.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
