--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imake"
-version = "0.1.2"
+version = "0.2.0"
 description = "iMake is a command line tool to simplify commands in Python projects, discarding the usability of a Makefile file."
 authors = ["William C. Canin <william.costa.canin@gmail.com>"]
 readme = "README.md"
@@ -29,13 +29,13 @@ imake = "snakypy.imake:run"
 [tool.poetry.dependencies]
 python = "^3.9"
 tomlkit = "^0.7.2"
-snakypy-helpers = ">=0.1.4"
+snakypy-helpers = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
-black = "^21.5b1"
-isort = "^5.8.0"
-mypy = "^0.812"
+black = "^21.6b0"
+isort = "^5.9.1"
+mypy = "^0.910"
 flake8 = "^3.9.2"
 tox = "^3.23.1"
 
