:bookmark: :card_index: Update version and update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [tool.poetry]
-name = "imake"
-version = "0.3.0"
-description = "iMake is a command line tool to simplify commands in Python projects, discarding the usability of a Makefile file."
 authors = ["William C. Canin <william.costa.canin@gmail.com>"]
-readme = "README.md"
-license = "MIT"
-keywords=["snakypy", "makefile", "make", "imake"]
+description = "iMake is a command line tool to simplify commands in Python projects, discarding the usability of a Makefile file."
 homepage = "https://github.com/snakypy/imake"
-repository = "https://github.com/snakypy/imake"
 include = ["LICENSE"]
+keywords = ["snakypy", "makefile", "make", "imake"]
+license = "MIT"
+name = "imake"
+readme = "README.md"
+repository = "https://github.com/snakypy/imake"
+version = "0.3.1"
 
 classifiers = [
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: POSIX :: Linux",
-    "Operating System :: MacOS",
-    "Operating System :: Unix",
-    "Programming Language :: Python :: 3"
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: POSIX :: Linux",
+  "Operating System :: MacOS",
+  "Operating System :: Unix",
+  "Programming Language :: Python :: 3",
 ]
 
 packages = [
-    { include = "snakypy" }
+  {include = "snakypy"},
 ]
 
 [tool.poetry.scripts]
@@ -28,20 +28,18 @@ imake = "snakypy.imake:run"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-tomlkit = "^0.7.2"
-snakypy-helpers = "^0.3.0"
+snakypy-helpers = "^0.3.1"
+tomlkit = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
-black = "^21.6b0"
+black = "^22.6.0"
+flake8 = "^3.9.2"
 isort = "^5.9.1"
 mypy = "^0.910"
-flake8 = "^3.9.2"
+pytest = "^6.2"
 tox = "^3.23.1"
 
 [tool.black]
-line-length = 88
-include = '\.pyi?$'
 exclude = '''
 
 (
@@ -61,22 +59,24 @@ exclude = '''
   )/
 )
 '''
+include = '\.pyi?$'
+line-length = 88
 
 [tool.isort]
-profile = "black"
-multi_line_output = 3
-src_paths = ["snakypy", "tests"]
-line_length = 88
-include_trailing_comma = true
 force_grid_wrap = 0
+include_trailing_comma = true
+line_length = 88
+multi_line_output = 3
+profile = "black"
+src_paths = ["snakypy", "tests"]
 use_parentheses = true
 
 [tool.pytest.ini_options]
-minversion = "6.0"
 cache_dir = "/tmp/.pytest_cache"
+minversion = "6.0"
 # addopts = "-ra -q"
 testpaths = ["tests"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
